Selecting passes in image editor does no longer work #45290

Closed
opened 2015-07-03 16:09:13 +02:00 by Sergey Sharybin · 8 comments

System Information

Debian Jessie, 64bit, intel integrate card

Blender Version

Broken: Master branch since 56ca7f3
Worked: All previous blender versions

Short description of error

It's no longer possible to browse non-combined pass in image editor.

Exact steps for others to reproduce the error

  • Render default cube scene
  • Try to select Depth pass

Also attaching file with all passes enabled passes.blend

**System Information** Debian Jessie, 64bit, intel integrate card **Blender Version** Broken: Master branch since 56ca7f3 Worked: All previous blender versions **Short description of error** It's no longer possible to browse non-combined pass in image editor. **Exact steps for others to reproduce the error** * Render default cube scene * Try to select Depth pass Also attaching file with all passes enabled [passes.blend](https://archive.blender.org/developer/F200127/passes.blend)
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Sergey Sharybin 2015-07-03 16:09:13 +02:00
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey

#45302 was marked as duplicate of this issue

#45302 was marked as duplicate of this issue

Added subscriber: @Inwader77

Added subscriber: @Inwader77

but if we switch on scene node mode - working proper

but if we switch on scene node mode - working proper

This issue was referenced by 6a132aa65d

This issue was referenced by 6a132aa65d45658262a634620e756b3fd6c2ddb6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by c43e2daa59

This issue was referenced by c43e2daa590b297514878d430369f79bc22f22ac
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45290
No description provided.