Fix T45290: Selecting passes in image editor does no longer work

This issue was introduced with the wrong fix I committed for dither (rB56ca7f34)
Which also means T45237 has to be re-open