source/blender/render/intern/source/pipeline.c
@@ -338,8 +338,6 @@ void RE_AcquireResultImageViews(Render *re, RenderResult *rr)
 
 			rv = rr->views.first;
 
-			rr->have_combined = (rv->rectf != NULL);
-
 			/* active layer */
 			rl = render_get_active_layer(re, re->result);
 
@@ -357,6 +355,7 @@ void RE_AcquireResultImageViews(Render *re, RenderResult *rr)
 				}
 			}
 
+			rr->have_combined = (rv->rectf != NULL);
 			rr->layers = re->result->layers;
 			rr->xof = re->disprect.xmin;
 			rr->yof = re->disprect.ymin;
@@ -411,7 +410,7 @@ void RE_AcquireResultImage(Render *re, RenderResult *rr, const int view_id)
 					rr->rectz = RE_RenderLayerGetPass(rl, SCE_PASS_Z, rv->name);
 			}
 
-			rr->have_combined = (rr->rectf != NULL);
+			rr->have_combined = (rv->rectf != NULL);
 			rr->layers = re->result->layers;
 			rr->views = re->result->views;
 
